Fixed account summary: CLOSED

--- a/src/main/resources/templates/appointment-summary.html
+++ b/src/main/resources/templates/appointment-summary.html
@@ -89,7 +89,7 @@
             appointment = document.getElementById('appointment-summary');
             status = document.createElement('p');
             status.className='lead';
-            status.innerText='Status: Active';
+            status.innerText='Status: Closed';
             appointment.appendChild(status);
             break;
     }
