updated the rating stuff

--- a/src/main/resources/templates/appointment-summary.html
+++ b/src/main/resources/templates/appointment-summary.html
@@ -29,15 +29,15 @@
         <ul>
             <li>
                 <h3>Date:</h3>
-                <p></p>
+                <p th:text="${appointmentDate}"></p>
             </li>
             <li>
                 <h3>Time:</h3>
-                <p></p>
+                <p th:text="'Appointment #' + ${appointmentID}"></p>
             </li>
             <li>
                 <h3>Description:</h3>
-                <p></p>
+                <p th:text="'Appointment #' + ${appointmentID}"></p>
             </li>
         </ul>
 
